# pyhron

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  LICENSE  README.md  bash.exe.stackdump  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yaml  reconciliation-check.yaml  web-app-ci.yml
apps/: __init__.py
apps/admin-console/: __init__.py
apps/api/: __init__.py  dependencies.py  main.py
apps/research-platform/: __init__.py
apps/terminal/: __init__.py  __main__.py  auth.py  demo.py  main.py  pyhron.tcss  widgets.py
apps/web/: index.html  package.json  tailwind.config.js
apps/web-app/: .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web-public/: .gitignore  Dockerfile  components.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
commodity_linkage_engine/: __init__.py  commodity_alert_publisher.py  commodity_to_stock_impact_engine.py  profile_loader.py  types.py
commodity_linkage_engine/climate_commodity_correlation/: __init__.py  enso_cpo_production_forecast.py  fire_hotspot_plantation_overlay.py  rainfall_agriculture_impact.py
commodity_linkage_engine/commodity_sensitivity_models/: __init__.py  coal_price_miner_revenue_model.py  cpo_plantation_stock_sensitivity.py  icp_energy_stock_sensitivity.py  nickel_price_miner_revenue_model.py
data-platform/: __init__.py
data-platform/alembic_migrations/: alembic.ini  env.py
data-platform/alternative_data_ingestion/: __init__.py  bkpm_investment_realization_ingestion.py  gaikindo_vehicle_sales_ingestion.py  nasa_firms_fire_hotspot_ingestion.py
data-platform/backup/: __init__.py
data-platform/commodity_ingestion/: __init__.py  cpo_price_mpob_ingestion.py  indonesian_crude_price_ingestion.py
data-platform/corporate-actions/: __init__.py
data-platform/database_models/: __init__.py  idx_equity_corporate_action.py  idx_equity_financial_statement.py  idx_equity_governance_flag.py  idx_equity_index_constituent.py  idx_equity_instrument.py  idx_equity_news_article.py  idx_equity_ohlcv_tick.py  indonesia_commodity_price.py  indonesia_corporate_bond.py  indonesia_fire_hotspot_event.py  indonesia_macro_indicator.py  indonesia_weather_rainfall.py  order_lifecycle_record.py  strategy_position_snapshot.py
data-platform/dataset-index/: __init__.py
data-platform/encryption/: __init__.py
data-platform/equity_ingestion/: idx_equity_corporate_action_ingestion.py  idx_equity_end_of_day_ingestion.py  idx_equity_governance_flag_ingestion.py  idx_equity_index_constituent_ingestion.py
data-platform/fixed_income_ingestion/: djppr_sbn_yield_curve_ingestion.py  idx_corporate_bond_ingestion.py  pefindo_credit_rating_ingestion.py
data-platform/historical-storage/: __init__.py
data-platform/ingestion/: __init__.py  idx_corporate_actions.py  idx_eod.py  idx_fundamentals.py  news_aggregator.py
data-platform/macro_ingestion/: bmkg_daily_rainfall_ingestion.py  bps_statistics_macro_ingestion.py
data-platform/migrations/: env.py
data-platform/models/: __init__.py  market.py  trading.py
data-platform/news-ingestion/: __init__.py
data-platform/news_ingestion/: indonesia_financial_news_aggregator.py  indonesia_news_sentiment_scorer.py  indonesia_news_ticker_extractor.py
data-platform/tasks/: celery_tasks.py
data-platform/tick-storage/: __init__.py
data_platform/: Dockerfile  __init__.py  pit_query.py
data_platform/adapters/: __init__.py  ccxt_adapter.py  eodhd_adapter.py  yfinance_adapter.py
data_platform/alembic_migrations/: alembic.ini  env.py
data_platform/alternative_data_ingestion/: __init__.py  (+6 more)
deploy/: RUNBOOK.md  uvicorn_log_config.json
docs/: data-dictionary.md  data_dictionary_additions.md  data_source_catalog.md  database_schema_dictionary.md  idx_specific_trading_rules.md  kafka_topic_contract.md  kafka_topic_contract_reference.md  operational_runbook.md  runbook.md
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
governance_intelligence/: __init__.py  audit_opinion_tracker.py  insider_ownership_change_detector.py  management_track_record_scorer.py  related_party_transaction_analyzer.py  share_pledge_risk_monitor.py
infra/: init-timescaledb.sql  kafka_topic_initialization.sh  timescaledb_initialization.sql
macro_intelligence/: apbn_fiscal_health_analyzer.py  indonesia_credit_spread_monitor.py  indonesia_economic_dashboard_builder.py  indonesia_yield_curve_calculator.py  policy_event_calendar_builder.py
proto/: equity_orders.proto  equity_positions.proto  macro_economic_indicators.proto  market_data.proto  market_data_realtime.proto  orders.proto  positions.proto  pre_trade_risk.proto  risk.proto  signals.proto  strategy_signals.proto
scripts/: backfill_historical_data.py  backup_postgres.sh  deploy_staging.sh  generate_proto.sh  healthcheck.sh  run_backtest.py  run_demo_tests.py  run_paper_trading.py  seed_data.py  seed_demo_data.py  seed_demo_portfolio.py  seed_real_data.py  setup_db.py  test_xbrl_parse_only.py  test_xbrl_scraper.py  validate_migrations.py
services/: __init__.py
shared/: __init__.py  async_database_session.py  cache.py  config.py  configuration_settings.py  database.py  kafka_producer_consumer.py  kafka_topics.py  logging.py  messaging.py  metrics.py  platform_exception_hierarchy.py  prometheus_metrics_registry.py  redis_cache_client.py  structured_json_logger.py
strategies/: __init__.py
strategy_engine/: __init__.py  base_strategy_interface.py  idx_bollinger_mean_reversion_strategy.py  idx_momentum_cross_section_strategy.py  idx_pairs_cointegration_strategy.py  idx_sector_rotation_strategy.py  idx_trading_calendar.py  idx_value_factor_strategy.py  survivorship_filter.py
tests/: conftest.py
(+1011 files in other folders)
