[tool.poetry]
name = "pyhron"
version = "0.1.0"
description = "Quantitative trading platform for IDX and global markets"
authors = ["Pyhron Team"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "apps" },
    { include = "services" },
    { include = "shared" },
    { include = "strategies" },
    { include = "data-platform" },
]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "~=0.115.0"
uvicorn = { version = "~=0.34.0", extras = ["standard"] }
slowapi = "~=0.1.9"
pydantic = "~=2.10.0"
pydantic-settings = "~=2.7.0"

# Data & compute
pandas = "~=2.2.0"
numpy = "~=2.1.0"
scipy = "~=1.14.0"

# Infrastructure
sqlalchemy = { version = "~=2.0.36", extras = ["asyncio"] }
asyncpg = "~=0.30.0"
psycopg = { version = "~=3.2.0", extras = ["binary"] }
redis = "~=5.2.0"
aiokafka = "~=0.12.0"
alembic = "~=1.14.0"
httpx = "~=0.28.0"
aiohttp = "~=3.11.0"
websockets = "~=14.1"

# Observability & resilience
structlog = "~=24.4.0"
tenacity = "~=9.0.0"
pybreaker = "~=1.2.0"

# Auth & security
passlib = { version = "~=1.7.4", extras = ["bcrypt"] }
PyJWT = "~=2.10.0"
cryptography = "~=44.0.0"

# Protobuf & gRPC
protobuf = "~=4.25.0"
grpcio-tools = "~=1.62.0"

# Task queue
celery = { version = "~=5.4.0", extras = ["redis"] }

# Utilities
python-dotenv = "~=1.0.0"

# Prometheus metrics
prometheus-client = "~=0.21.0"

# Market data & brokerage
yfinance = "~=0.2.50"
polygon-api-client = "~=1.14.0"
alpaca-py = "~=0.33.0"
ccxt = "~=4.4.0"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
torch = "~=2.5.0"
scikit-learn = "~=1.6.0"
mlflow = "~=2.19.0"
dask = { version = "~=2024.12.0", extras = ["distributed"] }

[tool.poetry.group.dev.dependencies]
ruff = "~=0.8.0"
mypy = "~=1.13.0"
pre-commit = "~=4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "~=8.3.0"
pytest-asyncio = "~=0.24.0"
pytest-cov = "~=6.0.0"
locust = "~=2.32.0"

[tool.poetry.group.lint.dependencies]
ruff = "~=0.8.0"
mypy = "~=1.13.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
    "S105",  # allow hardcoded password variable names
]

[tool.ruff.lint.isort]
known-first-party = ["apps", "services", "shared", "strategies"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "pybreaker.*",
    "slowapi.*",
    "yfinance.*",
    "ccxt.*",
    "alpaca.*",
    "polygon.*",
    "grpc_tools.*",
    "celery.*",
    "google.protobuf.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--cov=apps",
    "--cov=services",
    "--cov=shared",
    "--cov=strategies",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "gpu: marks tests requiring GPU",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
